--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -16,7 +16,7 @@
     font-family: 'Coolvetica';
     font-weight: 400;
 
-    &::before {
+    &:before {
       content: '<h1>';
       font-family: 'La Belle Aurore', cursive;
       color: #ffd700;
@@ -24,11 +24,10 @@
       position: absolute;
       margin-top: -40px;
       left: -15px;
-      animation: fadeIn 1s 1.7s backwards;
       opacity: 0.6;
     }
 
-    &::after {
+    &:after {
       content: '</h1>';
       font-family: 'La Belle Aurore', cursive;
       color: #ffd700;
@@ -75,7 +74,7 @@
     white-space: nowrap;
 
     &:hover {
-      background-color: #ffd700;
+      background: #ffd700;
       color: #333;
     }
   }
